# litentry-parachain

./: .codecov.yml  .dockerignore  .gitignore  .gitmodules  .taplo.toml  Cargo.toml  LICENCE_HEADER  LICENSE_HEADER  Makefile  README.md  benchmark-server-key.pem  para-1984-genesis  para-1984-wasm  rococo.scale  rust-toolchain.toml  rustfmt.toml  upstream_commit  worker0.service
bitacross-worker/cli/: Cargo.toml  README.md  benchmark.sh  demo_direct_call.sh  demo_direct_call_2_workers.sh  demo_shielding_unshielding.sh  demo_shielding_unshielding_using_shard_vault.sh  demo_sidechain.sh  demo_smart_contract.sh  demo_teeracle_generic.sh  demo_teeracle_whitelist.sh  lit_id_graph_stats.sh  lit_parentchain_nonce.sh  lit_set_heartbeat_timeout.sh  lit_ts_api_package_build.sh  lit_ts_integration_test.sh
bitacross-worker/service/: Cargo.toml
mock-tee-primitives/: Cargo.toml
mock-tee-primitives/src/: ethereum_signature.rs  identity.rs  lib.rs  validation_data.rs
node/: Cargo.toml  build.rs
node/res/: README.md
node/src/: chain_spec.rs  cli.rs  command.rs  evm_tracing_types.rs  main.rs  rpc.rs  rpc_evm.rs  rpc_without_evm.rs  service.rs  service_evm.rs  service_without_evm.rs  standalone_block_import.rs  tracing.rs
pallets/account-fix/: Cargo.toml
pallets/account-linker/: Cargo.toml
pallets/assets-handler/: Cargo.toml
pallets/bitacross/: Cargo.toml
pallets/bitacrossmimic/: Cargo.toml
pallets/bridge/: Cargo.toml
pallets/bridge-transfer/: Cargo.toml
pallets/drop3/: Cargo.toml
pallets/evm-address/: Cargo.toml
pallets/evm-assertions/: Cargo.toml
pallets/extrinsic-filter/: Cargo.toml
pallets/group/: Cargo.toml
pallets/halving-mint/: Cargo.toml
pallets/identity-management/: Cargo.toml
pallets/identity-management-mock/: Cargo.toml
pallets/offchain-worker/: Cargo.toml
pallets/parachain-staking/: Cargo.toml  README.md
pallets/parentchain/: Cargo.toml
pallets/payment-interface/: Cargo.toml
pallets/score-staking/: Cargo.toml
pallets/sidechain/: Cargo.toml  README.md
primitives/: Cargo.toml
primitives/common/: Cargo.toml
primitives/core/: Cargo.toml
primitives/hex/: Cargo.toml
primitives/sidechain/: Cargo.toml
primitives/src/: key.rs  lib.rs  vc.rs
primitives/staking/: Cargo.toml
primitives/teeracle/: Cargo.toml
primitives/teerex/: Cargo.toml
runtime/: Cargo.toml  build.rs
runtime/common/: Cargo.toml
runtime/integration-tests/: Cargo.toml
runtime/kitentry/: Cargo.toml
runtime/litentry/: Cargo.toml
runtime/litmus/: Cargo.toml  build.rs
runtime/moonbase/: Cargo.toml
runtime/paseo/: Cargo.toml
runtime/rococo/: Cargo.toml  build.rs
runtime/src/: constants.rs  impls.rs  lib.rs  migration.rs  mock.rs  tests.rs
tee-worker/: .dockerignore  .editorconfig  .env.dev  .gitattributes.orig  .gitignore  Cargo.toml  Makefile  README.md  UpdateRustSGXSDK.mk  build-release.Dockerfile  build.Dockerfile  entrypoint.sh  rust-toolchain.toml  upstream_commit  worker0.service
tee-worker/.githooks/: README.md  pre-commit
tee-worker/bitacross/: .gitignore  Cargo.toml  DESIGN.md  Makefile  README.md  build.Dockerfile  upstream_commit
tee-worker/cli/: Cargo.toml  README.md  benchmark.sh  demo_direct_call.sh  demo_direct_call_2_workers.sh  demo_https_test.sh  demo_indirect_invocation.sh  demo_shielding_unshielding.sh  demo_shielding_unshielding_multiworker.sh  demo_shielding_unshielding_using_shard_vault.sh  demo_shielding_unshielding_using_shard_vault_on_target_a.sh  demo_sidechain.sh  demo_smart_contract.sh  demo_teeracle_generic.sh  demo_teeracle_whitelist.sh  error_test.sh  lit_assertion_contracts_test.sh  lit_get_account_nonce.sh  lit_id_graph_stats.sh  lit_nonce.sh  lit_parentchain_nonce.sh  lit_send_errorneous_parentchain_call.sh  lit_set_heartbeat_timeout.sh  lit_tee_vc_contracts_test.sh  lit_test_dr_vc.sh  lit_test_failed_parentchain_extrinsic.sh  lit_ts_api_package_build.sh  lit_ts_dataprovider_test.sh  lit_ts_integration_test.sh  lit_ts_integration_test_2.sh  lit_ts_test.sh  lit_ts_worker_test.sh  lit_user_shielding_key.sh  release_ts_api_package.sh  set_heartbeat_timeout.sh  set_heartbeat_timeout_storage.sh  test_shield_on_target_nodes_with_transfer_to_alice.sh  ts_tests.sh  user_shielding_key.sh  vc_test.sh
tee-worker/client-api/: .gitignore  .pnp.cjs  .prettierrc  README.md  package.json  pnpm-lock.yaml
tee-worker/client-sdk/: .eslintrc.json  README.md  nx.json  package.json  pnpm-lock.yaml  project.json  tsconfig.base.json
tee-worker/docker/: demo-direct-call.yml  demo-indirect-invocation.yml  demo-shielding-unshielding-multiworker.yml  demo-sidechain.yml  demo-smart-contract.yml  demo-teeracle-generic.yml  demo-teeracle.yml  docker-compose.yml  entrypoint.sh  error-test.yml  fork-inducer.yml  https-test.yml  identity-test.yml  lit-assertion-contracts-test.yml  lit-batch-test.yml  lit-bulk-identity-test.yml  lit-bulk-vc-test.yml  lit-data-provider-test.yml  lit-data-providers-test.yml  lit-di-bitcoin-identity-multiworker-test.yml  lit-di-bitcoin-identity-test.yml  lit-di-evm-identity-multiworker-test.yml  lit-di-evm-identity-test.yml  lit-di-ievm-dentity-test.yml  lit-di-solana-identity-multiworker-test.yml  lit-di-solana-identity-test.yml  lit-di-substrate-identity-multiworker-test.yml  lit-di-substrate-identity-test.yml  lit-di-vc-correctness.yml  lit-di-vc-multiworker-test.yml  lit-di-vc-test.yml  lit-discord-identity-test.yml  lit-dr-vc-multiworker-test.yml  lit-dr-vc-test.yml  lit-evm-di-identity-test.yml  lit-evm-ii-identity-test.yml  lit-get-account-nonce.yml  lit-id-graph-stats-multiworker.yml  lit-id-graph-stats.yml  lit-identity-direct-invocation-test.yml  (+35 more)
tee-worker/enclave-runtime/: Cargo.toml  Enclave.config.production.xml  Enclave.config.xml  Enclave.edl  Makefile
tee-worker/hello_world/: Cargo.toml
tee-worker/identity/: .editorconfig  .gitignore  Makefile  build.Dockerfile  entrypoint.sh
tee-worker/local-setup/: .env.dev  .env.example  README.md  cli.js  development-worker.json  github-action-config-one-worker.json  github-action-config-rococo.json  (+21 more)
token-server/: .env.example  Cargo.toml
(+3951 files in other folders)
