[workspace]
members = [
    'node',
    'pallets/account-fix',
    'pallets/bridge',
    'pallets/bridge-transfer',
    'pallets/drop3',
    'pallets/extrinsic-filter',
    'pallets/evm-address',
    'pallets/identity-management',
    'pallets/vc-management',
    'pallets/sidechain',
    'pallets/teebag',
    'pallets/teeracle',
    'pallets/teerex',
    'pallets/teerex/sgx-verify',
    'pallets/parentchain',
    'pallets/test-utils',
    'pallets/group',
    'precompiles/*',
    'primitives/common',
    'primitives/core',
    'primitives/core/proc-macros',
    'primitives/core/macros',
    'primitives/hex',
    'primitives/sidechain',
    'primitives/teeracle',
    'primitives/teerex',
    'runtime/litentry',
    'runtime/litmus',
    'runtime/rococo',
    'runtime/common',
]

[profile.release]
opt-level = 3
panic = "unwind"

[profile.dev]
# https://internals.rust-lang.org/t/help-test-faster-incremental-debug-macos-builds-on-nightly/14016
split-debuginfo = 'unpacked'

[profile.dev.package.backtrace]
inherits = "release"

[profile.production]
codegen-units = 1
inherits = "release"
lto = "thin"
strip = "symbols"
incremental = false

[patch.crates-io]
ring = { git = "https://github.com/betrusted-io/ring-xous", branch = "0.16.20-cleanup" }
