[workspace]
members = [
    'node',
    'pallets/account-fix',
    'pallets/bitacross',
    'pallets/bridge',
    'pallets/bridge-transfer',
    'pallets/drop3',
    'pallets/extrinsic-filter',
    'pallets/evm-address',
    'pallets/identity-management',
    'pallets/vc-management',
    'pallets/sidechain',
    'pallets/teebag',
    'pallets/teerex',
    'pallets/teerex/sgx-verify',
    'pallets/parentchain',
    'pallets/test-utils',
    'pallets/group',
    'pallets/bitacross',
    'precompiles/*',
    'primitives/core',
    'primitives/core/proc-macros',
    'primitives/core/macros',
    'primitives/hex',
    'primitives/sidechain',
    'primitives/teerex',
    'runtime/litentry',
    'runtime/litmus',
    'runtime/rococo',
    'runtime/common',
]

[profile.release]
opt-level = 3
panic = "unwind"

[profile.dev]
# https://internals.rust-lang.org/t/help-test-faster-incremental-debug-macos-builds-on-nightly/14016
split-debuginfo = 'unpacked'

[profile.dev.package.backtrace]
inherits = "release"

[profile.production]
codegen-units = 1
inherits = "release"
lto = "thin"
strip = "symbols"
incremental = false

[workspace.dependencies]
async-trait = { version = "0.1.76" }
blake2-rfc = { version = "0.2.18", default-features = false }
clap = { version = "4.3", features = ["derive"] }
derive_more = { version = "0.99" }
log = { version = "0.4", default-features = false }
scale-info = { version = "2.10", default-features = false, features = ["derive"] }
parity-scale-codec = { version = "3.6", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false }
hex = { version = "0.4", default-features = false }
hex-literal = { version = "0.4.1" }
sha3 = { version = "0.10", default-features = false }
futures = { version = "0.3.30", features = ["compat"] }
jsonrpsee = { version = "0.16.2", features = ["server"] }
tokio = { version = "1.36.0", features = ["macros", "sync"] }
num_enum = { version = "0.7.2", default-features = false }
rustc-hex = { version = "2.0.1", default-features = false }

# cumulus client
cumulus-client-cli = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.42" }
cumulus-client-consensus-aura = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.42" }
cumulus-client-consensus-common = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.42" }
cumulus-client-network = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.42" }
cumulus-client-service = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.42" }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.42" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.42" }
cumulus-relay-chain-inprocess-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.42" }
cumulus-relay-chain-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.42" }
cumulus-relay-chain-minimal-node = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.42" }

# evm-tracing
# Moonbeam Team did not export its corresponding code
# Astar team maintained one as pallets under Astar-frame repo
# Due to the confliction of usbtrate/polkadot source
# Litentry maintained Astar team repo for further usage
moonbeam-primitives-ext = { git = "https://github.com/litentry/astar-frame", branch = "polkadot-v0.9.42" }
moonbeam-rpc-debug = { git = "https://github.com/litentry/astar-frame", branch = "polkadot-v0.9.42" }
moonbeam-rpc-primitives-debug = { git = "https://github.com/litentry/astar-frame", branch = "polkadot-v0.9.42", default-features = false }
moonbeam-rpc-primitives-txpool = { git = "https://github.com/litentry/astar-frame", branch = "polkadot-v0.9.42", default-features = false }
moonbeam-rpc-trace = { git = "https://github.com/litentry/astar-frame", branch = "polkadot-v0.9.42" }
moonbeam-rpc-txpool = { git = "https://github.com/litentry/astar-frame", branch = "polkadot-v0.9.42" }

# polkadot client
polkadot-cli = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.42" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.42" }
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.42" }
xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.42", default-features = false }

# frontier
fc-consensus = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.42", default-features = false }
fc-db = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.42", default-features = false }
fc-mapping-sync = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.42", default-features = false }
fc-rpc = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.42", default-features = false }
fc-rpc-core = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.42", default-features = false }
fc-storage = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.42", default-features = false }
fp-rpc = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.42", default-features = false }
fp-evm = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.42", default-features = false }

# substrate client
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sc-network-sync = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sc-sysinfo = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }

substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }

# wasm
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
pallet-evm = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.42", default-features = false, features = ["forbid-evm-reentrancy"] }

# benchmarking
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
try-runtime-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }

# local
core-primitives = { path = "primitives/core", default-features = true }
litentry-parachain-runtime = { path = "runtime/litentry", default-features = true }
litmus-parachain-runtime = { path = "runtime/litmus", default-features = true }
rococo-parachain-runtime = { path = "runtime/rococo", default-features = true }
pallet-bitacross = { path = "pallets/bitacross", default-features = false }
pallet-bridge = { path = "pallets/bridge", default-features = false }
pallet-bridge-transfer = { path = "pallets/bridge-transfer", default-features = false }
pallet-parachain-staking = { path = "pallets/parachain-staking", default-features = false }
precompile-utils = { path = "precompiles/utils", default-features = false }

[patch.crates-io]
ring = { git = "https://github.com/betrusted-io/ring-xous", branch = "0.16.20-cleanup" }
